--- a/NuGet.config
+++ b/NuGet.config
@@ -2,8 +2,9 @@
 <configuration>
   <packageSourceMapping>
     <!-- key value for <packageSource> should match key values from <packageSources> element -->
-    <packageSource key="nuget.org">
-      <package pattern="*" />
-    </packageSource>
+  <packageSources>
+    <clear />
+    <add key="Nugettest" value="https://pkgs.dev.azure.com/JoshMendSecondOrg/TestProject/_packaging/Nugettest/nuget/v3/index.json" />
+  </packageSources>
   </packageSourceMapping>
 </configuration>
