--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,5 +1,5 @@
 <Project>
   <ItemGroup>
-    <PackageVersion Include="AutoMapper"/>
+    <PackageVersion Include="AutoMapper" version="1.1.0.118"/>
   </ItemGroup>
 </Project>
