--- a/src/Conduit/Conduit.csproj
+++ b/src/Conduit/Conduit.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <ItemGroup>
-    <PackageReference Include="AutoMapper" />
+    <PackageReference Include="AutoMapper" version="1.1.0.118" />
   </ItemGroup>
 </Project>
