--- a/NuGet.config
+++ b/NuGet.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="Nugettest" value="https://pkgs.dev.azure.com/JoshMendSecondOrg/TestProject/_packaging/Nugettest/nuget/v3/index.json" />
+    <add key="newFeed" value="https://pkgs.dev.azure.com/JoshMendSecondOrg/TestProject/_packaging/newFeed/nuget/v3/index.json" />
   </packageSources>
 </configuration>
